reports/machine-learning/snn/neuronal-dynamics/1_1_elements_of_neuronal_systems.err.log
Traceback (most recent call last):
  File "/home/dev/py_env/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/dev/py_env/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/dev/py_env/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/dev/py_env/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/dev/py_env/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/dev/py_env/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/dev/py_env/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
- https://neuronaldynamics.epfl.ch/online/Ch1.S1.html
- https://www.healthline.com/health/neurons#types
- https://www.base64-image.de/
- https://qbi.uq.edu.au/brain/brain-anatomy/types-neurons

- https://www.humanbrainproject.eu/en/
- https://celltypes.brain-map.org/data
- https://portal.brain-map.org/
- https://celltypes.brain-map.org/assets/rc2-3caec3103da6ea975ccc7547a344ec45.webm
------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    - https://neuronaldynamics.epfl.ch/online/Ch1.S1.html[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (701287019.py, line 1)

